# training_with_team

photo_shake_v3/: example.env  main.py  pyproject.toml
photo_shake_v3/migrations/versions/: 270e6a3773f3_init.py
photo_shake_v3/src/: schemas.py
photo_shake_v3/src/conf/: config.py  messages.py
photo_shake_v3/src/database/: models.py
photo_shake_v3/src/repository/: comments.py  fotos.py  ratings.py  tags.py  transform_foto.py  users.py
photo_shake_v3/src/routes/: comments.py  fotos.py  ratings.py  tags.py  transform_post.py  users.py
photo_shake_v3/src/services/: auth.py  email.py
photo_shake_v3/tests/: conftest.py
photo_shake_v3/tests/comments/: test_repository_comments.py  test_route_comments.py
photo_shake_v3/tests/fotos/: test_repository_fotos.py  test_route_fotos.py
photo_shake_v3/tests/rating/: test_repository_ratings.py  test_route_ratings.py
photo_shake_v3/tests/tags/: test_repository_tags.py  test_route_tags.py
photo_shake_v3/tests/transformations/: test_repository_transform_post.py  test_route_transform_post.py
photo_shake_v3/tests/users/: test_repository_users.py  test_route_users.py
