[tool.poetry]
name = "photo shake - team project"
version = "0.1.0"
description = ""
authors = ["team-4"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.7"
python-dotenv = "^1.0.0"
alembic = "^1.12.1"
pydantic = "^2.4.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-mail = "^1.4.1"
redis = "^4.6.0"
cloudinary = "^1.36.0"
fastapi-limiter = "^0.1.5"
sqlalchemy-utils = "^0.41.1"
pytest = "^7.4.2"
faker = "^20.0.3"
django-qrcode = "^0.3"
qrcode = "^7.4.2"
pyqrcode = "^1.2.1"
pillow = "^10.0.1"
asyncio-redis = "^0.16.0"
pytest-asyncio = "^0.21.1"
pydantic-settings = "^2.1.0"


[tool.poetry.group.test.dependencies]
httpx = "^0.25.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

